--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -23,6 +23,8 @@ if (flutterVersionName == null) {
 }
 
 android {
+    ndkVersion "28.2.13676358"
+
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
@@ -72,7 +74,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.multidex:multidex:2.0.1'
 
-    implementation "com.braze:android-sdk-ui:40.0.0"
+    implementation "com.braze:android-sdk-ui:41.0.0"
     implementation "com.google.firebase:firebase-messaging:23.2.0"
     implementation project(':braze_plugin')
     implementation project(':integration_test')
